change background color

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
 // Variables
 
 // Main color
-$primary-color: #000;
+//$primary-color: #000;
+$primary-color: #506484;
 
 // Anchor color
 $secondary-color: #00cdff;
