try the page view number

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,11 @@
       </p>
     </div>
 
+    <div class="footer-center">
+      <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+      <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+    </div>
+
     <div class="footer-right">
       <p class="mb-0">
         Powered by
@@ -31,4 +36,5 @@
     </div>
 
   </div> <!-- div.d-flex -->
+
 </footer>
