--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,34 +7,42 @@
 -->
 
 <footer class="d-flex w-100 justify-content-center">
-  
-  <div class="d-flex justify-content-between align-items-center">
-    <div class="footer-left">
-      <p class="mb-0">
-        © {{ 'now' | date: "%Y" }}
-        <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>.
-        {% if site.data.rights.brief %}
-        <span data-toggle="tooltip" data-placement="top"
-          title="{{ site.data.rights.verbose }}">{{ site.data.rights.brief }}</span>
-        {% endif %}
-      </p>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="footer-left">
+            <p class="mb-0">
+                © {{ 'now' | date: "%Y" }}
+                <a href="{{ site.social.links[0] }}">{{ site.social.name }}</a>. {% if site.data.rights.brief %}
+                <span data-toggle="tooltip" data-placement="top" title="{{ site.data.rights.verbose }}">{{ site.data.rights.brief }}</span>
+                {% endif %}
+            </p>
+        </div>
+
+        <div class="footer-center">
+            <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+            <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+        </div>
+
+        <div class="footer-right">
+            <p class="mb-0">
+                Powered by
+                <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
+                with
+                <a href="https://github.com/cotes2020/jekyll-theme-chirpy/">Chirpy</a>
+                theme.
+            </p>
+        </div>
     </div>
-
-    <div class="footer-center">
-      <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-      <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
-    </div>
-
-    <div class="footer-right">
-      <p class="mb-0">
-        Powered by
-        <a href="https://jekyllrb.com" target="_blank">Jekyll</a>
-        with
-        <a href="https://github.com/cotes2020/jekyll-theme-chirpy/">Chirpy</a>
-        theme.
-      </p>
-    </div>
-
-  </div> <!-- div.d-flex -->
-
+    <!-- div.d-flex -->
 </footer>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5M3P4P560S"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-5M3P4P560S");
+</script>
